--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   image_picker: ^1.2.0
   intl: ^0.20.2
   lottie: ^3.3.1
+  dio: ^5.9.0
+  internet_connection_checker_plus: ^2.7.2
 
 dev_dependencies:
   flutter_test:
